--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
 .main {
   width: 80vw;
-  height: calc(100vh - calc(100vh - 100%));
+  height: 100%;
   background-color: $blue;
   position: absolute;
   right: 0;
